<resources>
    <string name="app_name">Reserve meal</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="label_go_to_register"><u> Don\'t have an account yet? Create new </u></string>
    <string name="label_dni">ID Card (D.N.I.)</string>
    <string name="label_password">Password</string>
    <string name="label_go_to_forget"><u> Forget password? </u> </string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_go_to_sign_in"><u>Have an account? Login</u></string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="label_password_confirmation">Password confirmation</string>
    <string name="enter_email">Please, enter your email address</string>
    <string name="enter_verification_code">Now, enter the verification code that we have sent to your email</string>
    <string name="btn_send_verification_code">Send email</string>
    <string name="enter_new_password">New password</string>
    <string name="enter_new_password_confirmation">New password confirmation</string>
    <string name="label_verification_code">Verification code</string>
    <string name="btn_change_password">Change password</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">Log out</string>
    <string name="price_product">$%1$.2f</string>
    <string name="scheduled_date">%1$s %2$s</string>
    <string name="base_url">http://192.168.1.9/reserve-meal/public/</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label_description">Description</string>
    <string name="label_stock">Stock available</string>
    <string name="lable_price">Price</string>
    <string name="label_create_meal">Create meal</string>
    <string name="label_add_funds">Add funds</string>
    <string name="label_amount">Amount</string>
    <string name="label_confirm_amount">Confirm amount</string>
    <string name="label_add">Add</string>
    <string name="label_my_reserves">My reserves</string>
    <string name="label_pick_date">Pick date</string>
    <string name="minQuantity">1</string>
    <string name="btn_confirm">Confirm</string>
    <string name="complete_all_fields">All fields must be filled in</string>
</resources>