<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.MainActivity">
    <!---Extiende de view group-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_dni"
            android:inputType="number" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password_confirmation"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_up" />

        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:clickable="false"
            android:gravity="center_horizontal"
            android:text="@string/label_go_to_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>