<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="bottom"
    tools:context=".ui.session.LoginActivity">
    <!---Extiende de view group-->

        <LinearLayout
            android:id="@+id/llStepOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSendVerificationCode"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_send_verification_code" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llStepTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_verification_code" />

            <EditText
                android:id="@+id/etVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_verification_code"
                android:inputType="textLongMessage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_password_confirmation" />

            <EditText
                android:id="@+id/etPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnChangePassword"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_change_password" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:clickable="false"
            android:gravity="center_horizontal"
            android:text="@string/label_go_to_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black" />

</LinearLayout>