<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_dni"
        android:inputType="number" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_amount"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/etReAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_confirm_amount"
        android:inputType="numberSigned|numberDecimal" />

    <Button
        android:id="@+id/btnAddFunds"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/label_add" />

</LinearLayout>