<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/label_create_meal"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textSize="@android:dimen/app_icon_size"/>

    <LinearLayout
        android:layout_marginTop="200sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_description"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/etStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_stock"
            android:inputType="number" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lable_price"
            android:inputType="numberSigned|numberDecimal" />

        <Button
            android:id="@+id/btnAddImage"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add image/s" />

        <Button
            android:id="@+id/btnAddMeal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/label_add" />

    </LinearLayout>
</LinearLayout>