<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reservemeal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_confirmReserveFragment"
            app:destination="@id/confirmReserveFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_meal"
        android:name="com.example.reservemeal.ui.meal.CreateMealFragment"
        android:label="@string/label_create_meal"
        tools:layout="@layout/fragment_create_meal" />

    <fragment
        android:id="@+id/nav_add_funds"
        android:name="com.example.reservemeal.ui.funds.AddFundsFragment"
        android:label="@string/label_add_funds"
        tools:layout="@layout/fragment_add_funds" />

    <fragment
        android:id="@+id/nav_my_reserves"
        android:name="com.example.reservemeal.ui.reserves.MyReservesFragment"
        android:label="@string/label_my_reserves"
        tools:layout="@layout/fragment_my_reserves" />
    <fragment
        android:id="@+id/confirmReserveFragment"
        android:name="com.example.reservemeal.ui.reserves.ConfirmReserveFragment"
        android:label="ConfirmReserveFragment" />
</navigation>